[gd_scene load_steps=3 format=3 uid="uid://bgtgr2217t66w"]

[ext_resource type="Script" uid="uid://b8qvi4iejhcnl" path="res://scripts/UserInterface/Menus/save_slots_menu.gd" id="1_jccs2"]
[ext_resource type="PackedScene" uid="uid://bi240clocu10d" path="res://scenes/menus/widgets/save_slot_button.tscn" id="2_advqd"]

[node name="SaveSlotsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jccs2")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.38900003
anchor_top = 0.393
anchor_right = 0.611
anchor_bottom = 0.60700005
offset_left = -0.12799072
offset_top = 32.29599
offset_right = 0.12805176
offset_bottom = -32.29602
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MenuTitle" type="Label" parent="MainContainer"]
custom_minimum_size = Vector2(0, 172)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "SELECT SAVE SLOT"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SaveSlotsSelectContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SaveSlot0" parent="MainContainer/SaveSlotsSelectContainer" instance=ExtResource("2_advqd")]
layout_mode = 2

[node name="SaveSlot1" parent="MainContainer/SaveSlotsSelectContainer" instance=ExtResource("2_advqd")]
layout_mode = 2
_slot_index = 1

[node name="SaveSlot2" parent="MainContainer/SaveSlotsSelectContainer" instance=ExtResource("2_advqd")]
layout_mode = 2
_slot_index = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
